--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,44 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
-
-$blue: #ddedff;
-$dark-blue: #0087ff;
-
-$yellow: #fef0b2;
-$dark-yellow: #ffbd00;
-
-$pink: #fad2e1;
-$dark-pink: #f84f7f;
-
-$purple: #dfccff;
-$dark-purple: #7f51f4;
-
-@mixin color-panel($color1, $color2) {
-  border: 1px solid $color2;
-  background-color: $color1;
-  color: $color2;
-}
-
 body {
   margin: 4rem 0;
 }
@@ -49,7 +8,9 @@ body {
 
 .numberCircle {
   margin-top: 30px;
+  margin-bottom: 30px;
   margin-left: 100px;
+  margin-right: 20px;
   width: 200px;
   line-height: 200px;
   border-radius: 50%;
@@ -68,20 +29,22 @@ body {
   border-radius: 0.3rem;
   padding: 1rem;
   margin-bottom: 1rem;
+}
 
-  &.panel-blue {
-    @include color-panel($blue, $dark-blue);
-  }
+.panel-blue {
+  border: 1px solid #0087ff;
+  background-color: #ddedff;
+  color: #0087ff;
+}
 
-  &.panel-yellow {
-    @include color-panel($yellow, $dark-yellow);
-  }
+.panel-pink {
+  border: 1px solid #f84f7f;
+  background-color: #fad2e1;
+  color: #f84f7f;
+}
 
-  &.panel-pink {
-    @include color-panel($pink, $dark-pink);
-  }
-
-  &.panel-purple {
-    @include color-panel($purple, $dark-purple);
-  }
+.panel-purple {
+  border: 1px solid #7f51f4;
+  background-color: #dfccff;
+  color: #7f51f4;
 }
