Tweak the graphs so that yesterday is always completely graphed.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,7 @@ body {
   line-height: 200px;
   border-radius: 50%;
   text-align: center;
+  padding-left: 20px;
   font-size: 80px;
   border: 2px solid #666;
   color: black;
