--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,17 @@
 body {
-  margin: 4rem 0;
+  margin: 1rem 0;
 }
 
 .title {
-  margin-bottom: 2rem;
+  color: hsl(0, 0%, 35%);
+}
+
+.capacity {
+  font-size: 15px;
 }
 
 .numberCircle {
-  margin-top: 30px;
+  margin-top: 2px;
   margin-bottom: 30px;
   margin-left: 100px;
   margin-right: 20px;
@@ -15,15 +19,20 @@ body {
   line-height: 200px;
   border-radius: 50%;
   text-align: center;
-  padding-left: 20px;
+  padding-left: 15px;
   font-size: 80px;
   border: 2px solid #666;
-  color: black;
+  color: hsl(0, 0%, 30%);
 }
 
-#percent {
-  font-size: 30px;
+.percent {
+  font-size: 25px;
   line-height: 30px;
+  color: hsl(0, 0%, 35%);
+}
+
+.updated {
+  margin-left: 50px;
 }
 
 .panel {
